# ATPBetting

./: .gitignore  pyproject.toml
Python/: main.py  past_features.py  stategy_assessment.py
