[tool.poetry]
name = "atpbetting"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <drestrepo@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
pandas = "^1.4.4"
wheel = "^0.37.1"
sklearn = "^0.0"
xgboost = "^1.6.2"
matplotlib = "^3.5.3"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
